[package]
name = "foreverbox_bot"
version = "0.1.0"
authors = ["Jacob Ellis Duncan <jellisduncan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
